# iap-programmer

./: 99-at32-iap.rules  CMakeLists.txt  LICENSE  README.md  update-translations.sh
.github/workflows/: build.yaml
assets/: resources.qrc
assets/desktop/: iap-programmer.desktop
assets/icons/windows/: win_resources.rc
assets/translations/: iap-programmer_en.ts  iap-programmer_zh_CN.ts
debian/: changelog  control  copyright  watch
myresource/src/translations/: iap-programmer_zh_CN.ts
src/: cli_programmer.cpp  cli_programmer.h  hiddevice.cpp  hiddevice.h  iaprotocol.cpp  iaprotocol.h  main.cpp  mainwindow.cpp  mainwindow.h
tools/: code-format.cfg  code-format.py
